@@ -2214,6 +2214,8 @@ GEN     matbasistoalg(GEN nf, GEN x);
 GEN     multable(GEN nf, GEN x);
 GEN     nf_to_scalar_or_alg(GEN nf, GEN x);
 GEN     nf_to_scalar_or_basis(GEN nf, GEN x);
+GEN     nf_cxlog(GEN nf, GEN x, long prec);
+GEN     nfV_cxlog(GEN nf, GEN x, long prec);
 GEN     nfadd(GEN nf, GEN x, GEN y);
 int     nfchecksigns(GEN nf, GEN x, GEN pl);
 GEN     nfdiv(GEN nf, GEN x, GEN y);
@@ -2224,6 +2226,7 @@ GEN     nfeltembed(GEN nf, GEN x, GEN ind0, long prec);
 GEN     nfeltsign(GEN nf, GEN x, GEN ind0);
 GEN     nfinv(GEN nf, GEN x);
 GEN     nfinvmodideal(GEN nf, GEN x, GEN ideal);
+GEN     nflogembed(GEN nf, GEN x, GEN *emb, long prec);
 GEN     nfM_det(GEN nf, GEN M);
 GEN     nfM_inv(GEN nf, GEN M);
 GEN     nfM_mul(GEN nf, GEN A, GEN B);
