@@ -616,7 +616,6 @@ GEN    poltobasis(GEN nf,GEN x);
 GEN    coltoalg(GEN nf,GEN x);
 
 GEN    rnfdisc_get_T(GEN nf, GEN P, GEN *lim);
-GEN    get_arch_real(GEN nf, GEN x, GEN *emb, long prec);
 GEN    make_integral(GEN nf, GEN L0, GEN f, GEN listpr);
 GEN    rnfallbase(GEN nf, GEN pol, GEN lim, GEN rnfeq, GEN *pD, GEN *pfi,
                   GEN *pdKP);
